period4 #comment build对象优化